[package]
name = "bijux-atlas"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Genomics runtime for GFF3/FASTA ingest, immutable dataset artifacts, gene-query APIs, and OpenAPI export"
repository.workspace = true
homepage = "https://bijux.github.io/bijux-atlas/"
documentation = "https://docs.rs/bijux-atlas/latest/bijux_atlas/"
readme = "README.md"
categories = ["science::bioinformatics", "command-line-utilities"]
exclude = ["tests/fixtures/**"]
keywords = ["bioinformatics", "genomics", "gff3", "fasta", "gene-query"]

[features]
default = ["serde", "backend-local"]
serde = []
backend-local = ["serde"]
backend-s3 = ["backend-local"]
bench-ingest-throughput = []
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
brotli = "6"
hex = "0.4"
hmac = "0.12"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
redis = { version = "0.27", features = ["tokio-comp"] }
serde.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "http2", "charset", "json"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab", "hooks"] }
serde_json.workspace = true
serde_yaml = "0.9"
semver.workspace = true
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
unicode-normalization = "0.1"
zstd = "0.13"

[build-dependencies]
semver.workspace = true

[dependencies.tikv-jemallocator]
version = "0.6"
optional = true

[dev-dependencies]
assert_cmd = "2"
bijux-cli = { workspace = true }
criterion = "0.5"
predicates = "3"
proptest = "1"
regex = "1.11"
tempfile = "=3.27.0"
tiny_http = "0.12"
walkdir = "2"

[[bin]]
name = "bijux-atlas"
path = "src/bin/bijux-atlas.rs"

[[bin]]
name = "bijux-atlas-openapi"
path = "src/bin/bijux-atlas-openapi.rs"

[[bin]]
name = "bijux-atlas-server"
path = "src/bin/bijux-atlas-server.rs"

[[test]]
name = "compatibility_core"
path = "tests/compatibility/core.rs"

[[test]]
name = "compatibility_model"
path = "tests/compatibility/model.rs"

[[test]]
name = "contracts_api"
path = "tests/contracts/api.rs"

[[test]]
name = "contracts_plugin"
path = "tests/contracts/plugin.rs"

[[test]]
name = "governance_no_network"
path = "tests/governance/no_network.rs"

[[test]]
name = "infrastructure_store"
path = "tests/infrastructure/store.rs"

[[test]]
name = "interfaces_client"
path = "tests/interfaces/client.rs"

[[test]]
name = "interfaces_cli_runtime"
path = "tests/interfaces/cli_runtime_parity.rs"

[[test]]
name = "interfaces_cli_surface"
path = "tests/interfaces/cli_surface.rs"

[[test]]
name = "interfaces_help_surface"
path = "tests/interfaces/help_surface.rs"

[[test]]
name = "interfaces_server"
path = "tests/interfaces/server.rs"

[[test]]
name = "interfaces_user_cli_surface"
path = "tests/interfaces/user_cli_surface.rs"

[[test]]
name = "workflows_end_to_end"
path = "tests/workflows/end_to_end.rs"

[[test]]
name = "workflows_ingest"
path = "tests/workflows/ingest.rs"

[[bench]]
name = "domain_canonical_json"
path = "benches/domain/canonical_json.rs"
harness = false

[[bench]]
name = "domain_stable_sorting"
path = "benches/domain/stable_sorting.rs"
harness = false

[[bench]]
name = "domain_security_data_protection"
path = "benches/domain/security_data_protection.rs"
harness = false

[[bench]]
name = "domain_query_parse_validation"
path = "benches/domain/query_parse_validation.rs"
harness = false

[[bench]]
name = "domain_dataset_manifest_codec"
path = "benches/domain/dataset_manifest_codec.rs"
harness = false

[[bench]]
name = "ingest_db_size_growth"
path = "benches/ingest/db_size_growth.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_fai_validation_overhead"
path = "benches/ingest/fai_validation_overhead.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_fasta_loading_throughput"
path = "benches/ingest/fasta_loading_throughput.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_gff3_parsing_throughput"
path = "benches/ingest/gff3_parsing_throughput.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_anomaly_overhead"
path = "benches/ingest/ingest_anomaly_overhead.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_artifact_compression"
path = "benches/ingest/ingest_artifact_compression.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_artifact_size"
path = "benches/ingest/ingest_artifact_size.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_catalog_generation"
path = "benches/ingest/ingest_catalog_generation.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_hashing_overhead"
path = "benches/ingest/ingest_hashing_overhead.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_large_scenario"
path = "benches/ingest/ingest_large_scenario.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_parallelism_scaling"
path = "benches/ingest/ingest_parallelism_scaling.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_resource_tracking"
path = "benches/ingest/ingest_resource_tracking.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_scenarios"
path = "benches/ingest/ingest_scenarios.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_shard_distribution"
path = "benches/ingest/ingest_shard_distribution.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_shard_generation_overhead"
path = "benches/ingest/ingest_shard_generation_overhead.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_thread_pool_scaling"
path = "benches/ingest/ingest_thread_pool_scaling.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_throughput"
path = "benches/ingest/ingest_throughput.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_validation_overhead"
path = "benches/ingest/ingest_validation_overhead.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_manifest_generation_latency"
path = "benches/ingest/manifest_generation_latency.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_sqlite_query_latency"
path = "benches/ingest/sqlite_query_latency.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_sqlite_write_performance"
path = "benches/ingest/sqlite_write_performance.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "ingest_transcript_extraction"
path = "benches/ingest/transcript_extraction.rs"
harness = false
required-features = ["bench-ingest-throughput"]

[[bench]]
name = "store_catalog_merge"
path = "benches/store/catalog_merge.rs"
harness = false

[[bench]]
name = "store_checksum_pipeline"
path = "benches/store/checksum_pipeline.rs"
harness = false

[[bench]]
name = "store_hot_read"
path = "benches/store/store_hot_read.rs"
harness = false

[[bench]]
name = "api_openapi_generation"
path = "benches/api/openapi_generation.rs"
harness = false

[[bench]]
name = "policy_evaluation"
path = "benches/policy/evaluation.rs"
harness = false

[[bench]]
name = "policy_validate"
path = "benches/policy/validate.rs"
harness = false

[[bench]]
name = "query_cache"
path = "benches/query/cache.rs"
harness = false

[[bench]]
name = "query_concurrency"
path = "benches/query/concurrency.rs"
harness = false

[[bench]]
name = "query_patterns"
path = "benches/query/patterns.rs"
harness = false

[[bench]]
name = "query_planner_and_serialization"
path = "benches/query/planner_and_serialization.rs"
harness = false

[[bench]]
name = "query_routing_and_index"
path = "benches/query/routing_and_index.rs"
harness = false

[[bench]]
name = "query_stages"
path = "benches/query/stages.rs"
harness = false

[[bench]]
name = "server_cache_manager"
path = "benches/server/cache_manager.rs"
harness = false

[[bench]]
name = "server_sequence_fetch"
path = "benches/server/sequence_fetch.rs"
harness = false

[[bench]]
name = "server_diff_merge"
path = "benches/server/diff_merge.rs"
harness = false

[[bench]]
name = "server_bulkhead_tuning"
path = "benches/server/bulkhead_tuning.rs"
harness = false

[[bench]]
name = "server_gene_lookup_p99"
path = "benches/server/gene_lookup_p99.rs"
harness = false

[[example]]
name = "client_dataset_query"
path = "examples/client/dataset_query.rs"

[[example]]
name = "library_getting_started"
path = "examples/library/getting_started.rs"
