[package]
name = "bijux-dev-atlas-adapters"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "IO adapters implementing dev-atlas core ports"
repository.workspace = true
homepage.workspace = true
keywords = ["bijux", "adapters", "filesystem", "process", "ports"]

[dependencies]
bijux-dev-atlas-core.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "file_walk"
harness = false
