[package]
name = "bijux-dev-atlas-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bijux-dev-atlas-model.workspace = true
bijux-dev-atlas-adapters.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"
