[package]
name = "bijux-dev-atlas-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bijux-dev-atlas-model.workspace = true
bijux-dev-atlas-adapters.workspace = true
bijux-dev-atlas-policies.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "core_engine"
harness = false
