[package]
name = "bijux-dev-atlas-core"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Deterministic checks runner and governance engine"
repository.workspace = true
homepage.workspace = true
keywords = ["bijux", "checks", "governance", "deterministic", "engine"]

[dependencies]
bijux-dev-atlas-model.workspace = true
bijux-dev-atlas-policies.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "core_engine"
harness = false
