[package]
name = "bijux-dev-atlas-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "report_codec"
harness = false
