[package]
name = "bijux-dev-atlas-model"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Serializable report models for dev control-plane outputs"
repository.workspace = true
homepage.workspace = true
keywords = ["bijux", "reports", "model", "serde", "contracts"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "report_codec"
harness = false
