[package]
name = "bijux-dev-atlas-policies"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Dev control-plane policy contracts and validations"
repository.workspace = true
homepage.workspace = true
keywords = ["bijux", "policy", "governance", "checks", "contracts"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[lib]
path = "src/lib.rs"

[[bench]]
name = "policy_eval"
harness = false
