[package]
name = "bijux-dev-atlas"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Development control-plane binary for bijux-atlas"
repository.workspace = true
homepage.workspace = true
keywords = ["bijux", "control-plane", "cli", "devops", "policy"]

[features]
kind_integration = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sha2 = "0.10"
regex = "1"
toml = "0.8"
bijux-dev-atlas-core.workspace = true
bijux-dev-atlas-model.workspace = true
bijux-dev-atlas-adapters.workspace = true
bijux-dev-atlas-policies.workspace = true

[dev-dependencies]
assert_cmd = "2"
tempfile = "=3.13.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "bijux-dev-atlas"
path = "src/main.rs"

[[bench]]
name = "inventory_scan"
harness = false

[[bench]]
name = "report_codec"
harness = false

[[bench]]
name = "policy_eval"
harness = false

[[bench]]
name = "core_engine"
harness = false

[[bench]]
name = "file_walk"
harness = false
