[package]
name = "bijux-umbrella"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
rust-version.workspace = true
description = "Umbrella runtime product that hosts Bijux plugins through the canonical `bijux` entrypoint"
repository.workspace = true
homepage.workspace = true
keywords = ["bijux", "cli", "plugins", "runtime", "umbrella"]
publish = false

[dependencies]
bijux-cli.workspace = true

[[bin]]
name = "bijux"
path = "src/bin/bijux.rs"
