[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bijux-atlas-scripts"
version = "0.1.0"
description = "Internal Python tooling package for bijux-atlas scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ruff==0.13.2",
  "jsonschema==4.25.1",
]

[project.scripts]
bijux-atlas-scripts = "bijux_atlas_scripts.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
